Change Log:

2007-12-07 Rev. 59 by LinuxDonald <linuxdonald@linuxdonald.de>
	*/clients/openanno.py: sync with fife

2007-11-23 Rev. 58 by LinuxDonald <linuxdonald@linuxdonald.de>
	added License file
	Removed Changelog from 50 to 57 because is were bugie


2007-11-14 Rev. 49 by LinuxDonald <linuxdonald@linuxdonald.de>
	*/trunk/fife_root/openanno.py: sync with fife

2007-11-14 Rev. 48 by LinuxDonald <linuxdonald@linuxdonald.de>
	*/trunk/fife_root/openanno.py: fixed small bugs

2007-11-14 Rev. 47 by LinuxDonald <linuxdonald@linuxdonald.de>
	*/trunk/fife_root/openanno/datasets/sprites/ships/animations/*.*: added more ships animation
	*/trunk/fife_root/openanno/datasets/sprites/ships/animations/mainship.xml, */trunk/fife_root/openanno/datasets/sprites/ships/ 		animations/mainship/*.*: fixed animation

2007-11-14 Rev. 46 by phiker < >
	*/trunk/fife_root/openanno/gfx/sprites/ships/fisher/*.*: added transparation

2007-11-14 Rev. 45 by LinuxDonald <linuxdonald@linuxdonald.de>
	*/trunk/fife_root/openanno/datasets/sprites/ships/*.*: added more transparation for the grafic's

2007-11-12 Rev. 44 by LinuxDonald <linuxdonald@linuxdonald.de>
	*/trunk/fife_root/openanno/datasets/sprites/ships/animations/*.*: added mainship animation
	*/trunk/fife_root/openanno/datasets/maps/openanno-test-map.xml, /trunk/fife_root/openanno/datasets/maps/openanno-test-map- 		savefile.xml: deltet char_ani and added mainship_ani
	*/trunk/fife_root/openanno/gfx/sprites/ships/mainship/*.*: maked the grafic`s transparent

2007-11-12 Rev. 43 by LinuxDonald <linuxdonald@linuxdonald.de>
	*/trunk/fife_root/openanno.py: fixed the crash when the char end walk

2007-11-12 Rev. 42 by LinuxDonald <linuxdonald@linuxdonald.de>

	*/trunk/fife_root/openanno.py, /trunk/fife_root/openanno_settings.py: sync with fife
	*/trunk/fife_root/openanno/changelog: better formarted but its not ready

2007-11-05 Rev. 41 by LinuxDonald <linuxdonald@linuxdonald.de>
