@@ -1,5 +1,8 @@
 Change Log:
 
+2007-12-08 Rev. 60 by LinuxDonald <linuxdonald@linuxdonald.de>
+	*/clients/openanno.py: sync with fife
+
 2007-12-07 Rev. 59 by LinuxDonald <linuxdonald@linuxdonald.de>
 	*/clients/openanno.py: sync with fife
 
